[package]
name = "rust-bmfont"
version = "0.1.0"
authors = ["Jérôme Schneider / Net Gusto <contact@netgusto.com>"]
license = "MIT"
description = "Bitmap font parser (.fnt)"
repository = "https://github.com/netgusto/bmfont"
keywords = ["bitmap font", "font", "parser"]

[lib]
name = "bmfont"
path = "src/lib.rs"

[dependencies]
xml-rs = "0.3.4"
