[package]
name = "rust-bmfont"
version = "0.1.2"
authors = ["Net Gusto <contact@netgusto.com>"]
license = "MIT"
description = "Bitmap font parser (.fnt)"
repository = "https://github.com/netgusto/rust-bmfont"
keywords = ["bitmap", "font", "parser"]

[lib]
name = "bmfont"
path = "src/lib.rs"

[dependencies]
xml-rs = "0.3.4"
